fix vertical overflow

--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,9 @@ html {
     scroll-behavior: smooth;
   }
   html, body {
-    overflow-x: hidden;
+    overflow: hidden;
     width: 100%;
+    height: 100%;
   }
   
 
